name:                clash-profiling-prepare
version:             0.0.0
synopsis:            Runs ghc frontend and prepares input for clash-profile-normalization-run
-- description:
homepage:            https://clash-lang.org/
license:             BSD2
author:              Leon Schoorl
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  HS-Source-Dirs:      instances
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  Exposed-Modules:     SerialiseInstances
  build-depends:       base                  >= 4.10     && < 5,
                       binary                >= 0.8.5    && < 0.11,
                       hashable              >= 1.1.2.3  && < 1.4,
                       template-haskell      >= 2.12.0.0 && < 2.17,
                       unordered-containers  >= 0.2.3.3  && < 0.3,

                       clash-lib,
                       clash-prelude

executable clash-profile-normalization-prepare
  main-is:             profile-normalization-prepare.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  build-depends:       base,
                       binary,
                       bytestring            >= 0.10.0.2 && < 0.11,
                       directory             >= 1.3.0.0  && < 1.4,
                       filepath              >= 1.4      && < 1.5,
                       ghc                   >= 8.4.0    && < 8.11,

                       clash-lib,
                       clash-benchmark,
                       clash-profiling-prepare

executable clash-profile-netlist-prepare
  main-is:             profile-netlist-prepare.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  build-depends:       base,
                       binary,
                       bytestring            >= 0.10.0.2 && < 0.11,
                       directory             >= 1.3.0.0  && < 1.4,
                       filepath              >= 1.4      && < 1.5,
                       ghc                   >= 8.4.0    && < 8.11,

                       clash-lib,
                       clash-benchmark,
                       clash-profiling-prepare
