name:                clash-profiling-prepare
version:             0.0.0
synopsis:            Runs ghc frontend and prepares input for clash-profile-normalization-run
-- description:
homepage:            https://clash-lang.org/
license:             BSD2
author:              Leon Schoorl
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  HS-Source-Dirs:      instances
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  Exposed-Modules:     SerialiseInstances
  build-depends:       base,
                       binary,
                       hashable,
                       template-haskell,
                       unordered-containers,

                       clash-lib,
                       clash-prelude

executable clash-profile-normalization-prepare
  main-is:             profile-normalization-prepare.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  build-depends:       base,
                       binary,
                       bytestring,
                       directory,
                       filepath,
                       ghc,

                       clash-lib,
                       clash-benchmark,
                       clash-profiling-prepare

executable clash-profile-netlist-prepare
  main-is:             profile-netlist-prepare.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  build-depends:       base,
                       binary,
                       bytestring,
                       directory,
                       filepath,
                       ghc,

                       clash-lib,
                       clash-benchmark,
                       clash-profiling-prepare
