name:                clash-profiling
version:             0.0.0
synopsis:            A profilable run of the Clash normalization process
-- description:
homepage:            https://clash-lang.org/
license:             BSD2
author:              Leon Schoorl
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

flag experimental-evaluator
  description:
    Use the new partial evaluator (experimental; may break)
  default: False
  manual: True

executable clash-profile-normalization-run
  main-is:             profile-normalization-run.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  build-depends:       base                 >= 4.10     && < 5,
                       binary               >= 0.8.5    && < 0.11,
                       bytestring           >= 0.10.0.2 && < 0.11,
                       concurrent-supply    >= 0.1.7    && < 0.2,
                       containers           >= 0.5.4.0  && < 0.7,
                       deepseq              >= 1.4      && < 1.5,
                       directory            >= 1.3.0.0  && < 1.4,
                       filepath             >= 1.4      && < 1.5,
                       mtl                     >= 2.1.2    && < 2.3,
                       text                    >= 1.2.2    && < 1.3,
                       unordered-containers >= 0.2.3.3  && < 0.3,

                       clash-benchmark,
                       clash-ghc,
                       clash-lib,
                       clash-prelude,
                       clash-profiling-prepare
  -- automatically build ...-prepare tool
  build-tool-depends:  clash-profiling-prepare:clash-profile-normalization-prepare

  if flag(experimental-evaluator)
    cpp-options: -DEXPERIMENTAL_EVALUATOR

executable clash-profile-netlist-run
  main-is:             profile-netlist-run.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  build-depends:       base                 >= 4.10     && < 5,
                       binary               >= 0.8.5    && < 0.11,
                       bytestring           >= 0.10.0.2 && < 0.11,
                       concurrent-supply    >= 0.1.7    && < 0.2,
                       containers           >= 0.5.4.0  && < 0.7,
                       deepseq              >= 1.4      && < 1.5,
                       directory            >= 1.3.0.0  && < 1.4,
                       filepath             >= 1.4      && < 1.5,
                       mtl                     >= 2.1.2    && < 2.3,
                       text                    >= 1.2.2    && < 1.3,
                       unordered-containers >= 0.2.3.3  && < 0.3,

                       clash-benchmark,
                       clash-ghc,
                       clash-lib,
                       clash-prelude,
                       clash-profiling-prepare
  -- automatically build ...-prepare tool
  build-tool-depends:  clash-profiling-prepare:clash-profile-netlist-prepare
