name:                clash-profiling
version:             0.0.0
synopsis:            A profilable run of the Clash normalization process
-- description:
homepage:            https://clash-lang.org/
license:             BSD2
author:              Leon Schoorl
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable clash-profile-normalization-run
  main-is:             profile-normalization-run.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  build-depends:       base,
                       binary,
                       bytestring,
                       deepseq,

                       clash-benchmark,
                       clash-ghc,
                       clash-lib,
                       clash-prelude,
                       clash-profiling-prepare
  -- automatically build ...-prepare tool
  build-tool-depends:  clash-profiling-prepare:clash-profile-normalization-prepare

executable clash-profile-netlist-run
  main-is:             profile-netlist-run.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wcompat
  build-depends:       base,
                       binary,
                       bytestring,
                       deepseq,
                       filepath,
                       text,

                       clash-benchmark,
                       clash-ghc,
                       clash-lib,
                       clash-prelude,
                       clash-profiling-prepare
  -- automatically build ...-prepare tool
  build-tool-depends:  clash-profiling-prepare:clash-profile-netlist-prepare
